TODO
* add support for:
  - \\
  - c:\\..\\

* improve sanitize path/filename
* add libcpath_codepage.h and codepage functions
* update man page
* add more tests

20141003
* changes for project site move
* worked on support for paths that start with \\?\ or \\.\

20140915
* changes for project site move

20140626
* worked on pre Windows XP support

20140624
* fix for handling UNC path with current working directory without a trailing \
* updated msvscpp files
* worked on tests for Windows paths

20140506
* fixes to build static library with mingw and cygwin

20140105
* 2014 update
* updated dependencies

20130809
* updated dependencies

20130609
* fix in .pc.in file

20130509
* removed CRT functions
* updated dependencies

20130413
* updated dependencies

20130404
* textual changes
* updated dependencies

20130327
* small updates

20130113
* updated msvscpp files

20130103
* 2013 update

20121225
* added .gitignore
* added msvscpp files

20121018
* bug fix in error handling of current working directory

20120919
* updated dependencies

20120904
* updated dependencies

20120630
* fix for missing PATH_MAX in older versions of OSX

20120601
* worked on sanitize path and filename functions

20120507
* email and project site change

20120425
* fixes for pkg-config detection of libraries

20120409
* updated dependencies

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* added error functions

20120405
* Worked on include header

20120403
* Worked on stand-alone version
